# wxapp-checkin

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  README.md  changes.md  docker-compose.yml  findings.md  package-lock.json  package.json  progress.md  project.config.json  project.private.config.json  release_audit_report.md  security_best_practices_report.md  task_plan.md
backend-rust/: .env.example  .env.prod.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
backend-rust/src/: app_state.rs  config.rs  domain.rs  error.rs  lib.rs  main.rs  rate_limit.rs  replay_guard.rs  terminal_banner.rs  token.rs
backend-rust/src/api/: activity.rs  activity_contracts.rs  auth.rs  auth_extractor.rs  client_ip.rs  error_response.rs  health.rs  mod.rs  staff.rs  staff_contracts.rs  staff_contracts_tests.rs
backend-rust/src/db/: activity_repo.rs  attendance_repo.rs  attendance_repo_tests.rs  log_repo.rs  mod.rs  user_repo.rs
backend-rust/src/db/activity_repo/: detail.rs  listing.rs  listing_tests.rs  mod.rs  time_codec_tests.rs  user_activity.rs
backend-rust/src/service/: activity_service.rs  attendance_service.rs  auth_service.rs  auth_service_tests.rs  mod.rs  shared_helpers.rs  staff_service.rs
backend-rust/src/service/activity_service/: code.rs  detail.rs  list.rs  list_tests.rs  (+3 more)
backend-rust/tests/: api_error_response.rs  auth_security.rs  contract_source_guards.rs  deployment_contracts.rs  documentation_contracts.rs  log_repo_json_query.rs  repository_hygiene_contracts.rs  staff_audit_contracts.rs  suda_union_utf8mb4_bin_contract.rs  token.rs
(+535 files in other folders)
