[package]
name = "wxapp-checkin-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "derive", "macros", "mysql", "runtime-tokio-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
bcrypt = "0.17"
thiserror = "2"
tower-http = { version = "0.6", features = ["trace"] }
headers = "0.4"
governor = "0.10"
hmac = "0.12"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
moka = { version = "0.12", features = ["sync"] }
sha2 = "0.10"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
